crates/wdl-ast/tests/validation/duplicate-output/source.errors
error: task `t` contains a duplicate output section
   ┌─ tests/validation/duplicate-output/source.wdl:10:5
   │
 6 │     output {
   │     ------ first output section is defined here
   ·
10 │     output {
   │     ^^^^^^ this output section is a duplicate

error: workflow `w` contains a duplicate output section
   ┌─ tests/validation/duplicate-output/source.wdl:35:5
   │
31 │     output {
   │     ------ first output section is defined here
   ·
35 │     output {
   │     ^^^^^^ this output section is a duplicate

